[gd_scene load_steps=25 format=2]

[ext_resource path="res://Graphics/Buttons/Craft.png" type="Texture" id=1]
[ext_resource path="res://Graphics/Icons/Money.png" type="Texture" id=2]
[ext_resource path="res://Graphics/Icons/Energy.png" type="Texture" id=3]
[ext_resource path="res://Graphics/Icons/Minerals.png" type="Texture" id=4]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=5]
[ext_resource path="res://Graphics/Buttons/audio.png" type="Texture" id=6]
[ext_resource path="res://Resources/default_theme.tres" type="Theme" id=7]
[ext_resource path="res://Graphics/Icons/stone.png" type="Texture" id=8]
[ext_resource path="res://Graphics/Buttons/Shop.png" type="Texture" id=9]
[ext_resource path="res://Graphics/Buttons/Inventory.png" type="Texture" id=10]
[ext_resource path="res://Graphics/Materials/soil.png" type="Texture" id=11]
[ext_resource path="res://Graphics/Icons/SP.png" type="Texture" id=12]
[ext_resource path="res://Graphics/Buttons/ScienceTree.png" type="Texture" id=13]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_bottom = 2
border_color = Color( 0.4, 0.501961, 0.8, 1 )

[sub_resource type="InputEventAction" id=2]
action = "mute"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[sub_resource type="InputEventAction" id=4]
action = "craft"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[sub_resource type="InputEventAction" id=6]
action = "inventory"

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[sub_resource type="InputEventAction" id=8]
action = "shop"

[sub_resource type="ShortCut" id=9]
shortcut = SubResource( 8 )

[sub_resource type="InputEventAction" id=10]
action = "science_tree"

[sub_resource type="ShortCut" id=11]
shortcut = SubResource( 10 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="Panel" parent="."]
margin_right = 1280.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 1224.0
margin_right = 1789.0
margin_bottom = 519.0
rect_scale = Vector2( 0.09, 0.09 )
shortcut_in_tooltip = false
shortcut = SubResource( 3 )
icon = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resources" type="HBoxContainer" parent="."]
margin_top = 4.0
margin_right = 1216.0
margin_bottom = 36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money" type="Control" parent="Resources"]
margin_right = 240.0
margin_bottom = 32.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 3

[node name="Text" type="Label" parent="Resources/Money"]
margin_left = 44.0
margin_top = 4.0
margin_right = 77.0
margin_bottom = 28.0
text = "100"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texture" type="TextureButton" parent="Resources/Money"]
margin_left = 10.0
margin_top = 3.0
margin_right = 42.0
margin_bottom = 35.0
rect_scale = Vector2( 0.8, 0.8 )
texture_normal = ExtResource( 2 )

[node name="Minerals" type="Control" parent="Resources"]
margin_left = 244.0
margin_right = 484.0
margin_bottom = 32.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 3

[node name="Text" type="Label" parent="Resources/Minerals"]
margin_left = 44.0
margin_top = 4.0
margin_right = 116.0
margin_bottom = 28.0
text = "100/100"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texture" type="TextureButton" parent="Resources/Minerals"]
margin_left = 4.0
margin_right = 260.0
margin_bottom = 256.0
rect_scale = Vector2( 0.12, 0.12 )
texture_normal = ExtResource( 4 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stone" type="Control" parent="Resources"]
margin_left = 488.0
margin_right = 728.0
margin_bottom = 32.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 3

[node name="Text" type="Label" parent="Resources/Stone"]
margin_left = 44.0
margin_top = 4.0
margin_right = 301.0
margin_bottom = 28.0
size_flags_horizontal = 3
text = "100"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texture" type="TextureButton" parent="Resources/Stone"]
margin_left = -2.0
margin_top = -4.0
margin_right = 254.0
margin_bottom = 252.0
rect_scale = Vector2( 0.14, 0.14 )
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Soil" type="Control" parent="Resources"]
visible = false
margin_left = 732.0
margin_right = 972.0
margin_bottom = 32.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 3

[node name="Text" type="Label" parent="Resources/Soil"]
margin_left = 44.0
margin_top = 4.0
margin_right = 301.0
margin_bottom = 28.0
size_flags_horizontal = 3
text = "100"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texture" type="TextureButton" parent="Resources/Soil"]
margin_left = -2.0
margin_top = -4.0
margin_right = 254.0
margin_bottom = 252.0
rect_scale = Vector2( 0.14, 0.14 )
texture_normal = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Energy" type="Control" parent="Resources"]
margin_left = 732.0
margin_right = 972.0
margin_bottom = 32.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 3

[node name="Text" type="Label" parent="Resources/Energy"]
margin_left = 44.0
margin_top = 4.0
margin_right = 284.0
margin_bottom = 28.0
text = "100"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texture" type="TextureButton" parent="Resources/Energy"]
margin_left = 4.0
margin_right = 260.0
margin_bottom = 256.0
rect_scale = Vector2( 0.12, 0.12 )
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SP" type="Control" parent="Resources"]
margin_left = 976.0
margin_right = 1216.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="Text" type="Label" parent="Resources/SP"]
margin_left = 44.0
margin_top = 4.0
margin_right = 84.0
margin_bottom = 28.0
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texture" type="TextureRect" parent="Resources/SP"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 12 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="."]
margin_left = 1216.0
margin_top = 48.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 64, 0 )
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Craft" type="TextureButton" parent="Buttons"]
visible = false
margin_top = 240.0
margin_right = 64.0
margin_bottom = 304.0
shortcut_in_tooltip = false
shortcut = SubResource( 5 )
texture_normal = ExtResource( 1 )

[node name="Inventory" type="TextureButton" parent="Buttons"]
margin_top = 240.0
margin_right = 64.0
margin_bottom = 304.0
shortcut_in_tooltip = false
shortcut = SubResource( 7 )
texture_normal = ExtResource( 10 )

[node name="Shop" type="TextureButton" parent="Buttons"]
margin_top = 304.0
margin_right = 64.0
margin_bottom = 368.0
shortcut_in_tooltip = false
shortcut = SubResource( 9 )
texture_normal = ExtResource( 9 )

[node name="ScienceTree" type="TextureButton" parent="Buttons"]
margin_top = 368.0
margin_right = 64.0
margin_bottom = 432.0
shortcut_in_tooltip = false
shortcut = SubResource( 11 )
texture_normal = ExtResource( 13 )
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="toggled" from="Button" to="." method="_on_Button_toggled"]
[connection signal="mouse_entered" from="Resources/Money/Texture" to="." method="_on_Texture_mouse_entered" binds= [ "MONEY" ]]
[connection signal="mouse_exited" from="Resources/Money/Texture" to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Resources/Minerals/Texture" to="." method="_on_Texture_mouse_entered" binds= [ "MINERALS" ]]
[connection signal="mouse_exited" from="Resources/Minerals/Texture" to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Resources/Stone/Texture" to="." method="_on_Texture_mouse_entered" binds= [ "STONE" ]]
[connection signal="mouse_exited" from="Resources/Stone/Texture" to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Resources/Soil/Texture" to="." method="_on_Texture_mouse_entered" binds= [ "SOIL" ]]
[connection signal="mouse_exited" from="Resources/Soil/Texture" to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Resources/Energy/Texture" to="." method="_on_Texture_mouse_entered" binds= [ "ENERGY" ]]
[connection signal="mouse_exited" from="Resources/Energy/Texture" to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Resources/SP/Texture" to="." method="_on_Texture_mouse_entered" binds= [ "SCIENCE_POINTS" ]]
[connection signal="mouse_exited" from="Resources/SP/Texture" to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Buttons/Craft" to="." method="_on_Craft_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/Craft" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Buttons/Craft" to="." method="_on_Craft_pressed"]
[connection signal="mouse_entered" from="Buttons/Inventory" to="." method="_on_Inventory_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/Inventory" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Buttons/Inventory" to="." method="_on_Inventory_pressed"]
[connection signal="mouse_entered" from="Buttons/Shop" to="." method="_on_Shop_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/Shop" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Buttons/Shop" to="." method="_on_Shop_pressed"]
[connection signal="mouse_entered" from="Buttons/ScienceTree" to="." method="_on_ScienceTree_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/ScienceTree" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Buttons/ScienceTree" to="." method="_on_ScienceTree_pressed"]
